--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<body>
 		Hi
-		<form action="db.php" method="post">
+		<form action="latin.php" method="post">
 			<input type="text" name="input" id="input" autocomplete="off">
 			<input type="submit" value="Submit">
 		</form>
@@ -22,7 +22,7 @@
 			console.log("Ran");
 			$.ajax({
 				type: "POST",
-				url: "db.php",
+				url: "latin.php",
 				datatype: "html",
 				data: {input: document.getElementById("input").value},
 				success: function(data) {
