Make Bootstrap Look Nice-ish

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -19,9 +19,11 @@
   <body>
 
     <div class="container">
-      <div class="header clearfix">
+      <div class="page-header">
         <h1 class="text-muted text-center">Latin Translator</h1>
       </div>
+
+	<p><br></p>
 
         <!--<p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>-->
 	<div class="row">
@@ -36,11 +38,14 @@
 	</div>
 
       <div class="row marketing">
-	<p id="output">Replace Me!</p>
+	<div class="col-md-3"></div>
+	<div class="col-md-6 col-md-offset-3">
+	<p id="output">Replace Me! This is some sample text that is actually made up of words and not just a big line of letters. Hopefully Bootstrap will start breaking on words now. Pls thanks.</p>
+	</div>
       </div>
 
       <footer class="footer text-center">
-        <p>&copy; Company 2017</p>
+        <p>&copy; Caleb Smith 2017</p>
       </footer>
 
     </div> <!-- /container -->
