--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -14,7 +14,11 @@
 
     <!-- Custom styles for this template -->
     <link href="narrow-jumbotron.css" rel="stylesheet">
-  </head>
+
+    <!-- jQuery JavaScript Source -->
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+      </head>
 
   <body>
 
@@ -29,9 +33,9 @@
 	<div class="row">
 	  <div class="col-lg-12">
 	    <div class="input-group input-group-lg">
-	      <input type="text" class="form-control" placeholder="Enter Latin..." id="input" name="input">
+	      <input type="text" class="form-control" autocomplete="off" placeholder="Enter Latin..." id="input" name="input">
 	      <span class="input-group-btn">
-		<button class="btn btn-default" type="button" id="clear">CLEAR</button>
+		<button class="btn btn-default" type="button">CLEAR</button>
 	      </span>
 	    </div>
 	  </div>
@@ -40,14 +44,31 @@
       <div class="row marketing">
 	<div class="col-md-3"></div>
 	<div class="col-md-6 col-md-offset-3">
-	<p id="output">Replace Me! This is some sample text that is actually made up of words and not just a big line of letters. Hopefully Bootstrap will start breaking on words now. Pls thanks.</p>
+	<p id="output">Well, what are you waiting for?<br>Search something already!</p>
 	</div>
       </div>
 
       <footer class="footer text-center">
-        <p>&copy; Caleb Smith 2017</p>
+        <p>&copy; Caleb Smith 2017<br><a href="#">About</a></p>
       </footer>
 
     </div> <!-- /container -->
   </body>
+
+    <script type="text/javascript">
+	$("input").keyup(function(){
+		console.log("Posting");
+		$.ajax({
+			type: "POST",
+			url: "../latin.php",
+			datatype: "html",
+			data: {input: document.getElementById("input").value},
+			success: function(data) {
+				document.getElementById("output").innerHTML = data;
+			}
+		});
+	});
+    </script>
+
+
 </html>
