Clear Button Clears Output Too

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -74,6 +74,7 @@
 	function clearInput() {
 		console.log("Clearing");
 		document.getElementById("input").value = "";
+		document.getElementById("output").innerHTML = "";
 	}
     </script>
 </html>
