--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -49,7 +49,7 @@
       </div>
 
       <footer class="footer text-center">
-        <p>&copy; Caleb Smith 2017<br><a href="#">About</a></p>
+        <p>&copy; Caleb Smith 2017<br><a href="https://github.com/karagenit/latin-bootstrap/blob/master/README.md">About</a></p>
       </footer>
 
     </div> <!-- /container -->
