--- a/index.html
+++ b/index.html
@@ -1,44 +1,80 @@
-<html>
-	<body>
-		Hi
-		<form action="latin.php" method="post">
-			<input type="text" name="input" id="input" autocomplete="off">
-			<input type="submit" value="Submit">
-		</form>
-		<p id="output">
-		</p>
-		<p id="phpout">
-		</p>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
 
-	<script type = "text/javascript"
-         src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
-	</script>
+    <title>Latin Translator</title>
 
-	<script type="text/javascript">
-	
-		$("input").keyup(function() {
-			document.getElementById("output").innerHTML = document.getElementById("input").value;
-			console.log("Ran");
-			$.ajax({
-				type: "POST",
-				url: "latin.php",
-				datatype: "html",
-				data: {input: document.getElementById("input").value},
-				success: function(data) {
-					document.getElementById("phpout").innerHTML = data;
-					console.log("AJAX'd");
-				}
-			});
-		});		
-	
-	</script>
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap.min.css" rel="stylesheet">
 
+    <!-- Custom styles for this template -->
+    <link href="narrow-jumbotron.css" rel="stylesheet">
 
-	<!--
-	      <script type = "text/javascript">
-        	 $(document).ready(function(){document.write("Hello, World!");console.log("Test 2");});
-	       </script>
-	-->
+    <!-- jQuery JavaScript Source -->
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+      </head>
+
+  <body>
+
+    <div class="container">
+      <div class="page-header">
+        <h1 class="text-muted text-center">Latin Translator</h1>
+      </div>
+
+	<p><br></p>
+
+        <!--<p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>-->
+	<div class="row">
+	  <div class="col-lg-12">
+	    <div class="input-group input-group-lg">
+	      <input type="text" class="form-control" autocomplete="off" placeholder="Enter Latin..." id="input" name="input">
+	      <span class="input-group-btn">
+		<button class="btn btn-default" id="clear" onclick="clearInput();" type="button">X</button>
+	      </span>
+	    </div>
+	  </div>
+	</div>
+
+      <div class="row marketing">
+	<div class="col-md-3"></div>
+	<div class="col-md-6 col-md-offset-3">
+	<p id="output">Well, what are you waiting for?<br>Search something already!</p>
+	</div>
+      </div>
+
+      <footer class="footer text-center">
+        <p>&copy; Caleb Smith 2017<br><a href="https://github.com/karagenit/latin-bootstrap/blob/master/README.md">About</a></p>
+      </footer>
+
+    </div> <!-- /container -->
+  </body>
+
+    <script type="text/javascript">
+	$("input").keyup(function(){
+		console.log("Posting");
+		$.ajax({
+			type: "POST",
+			url: "latin.php",
+			datatype: "html",
+			data: {input: document.getElementById("input").value},
+			success: function(data) {
+				document.getElementById("output").innerHTML = data;
+			}
+		});
+	});
+    </script>
+
+    <script type="text/javascript">
+	function clearInput() {
+		console.log("Clearing");
+		document.getElementById("input").value = "";
+		document.getElementById("output").innerHTML = "";
+	}
+    </script>
 </html>
-
